<resources>
    <string name="app_name">Dash Pilar</string>
    <string name="dine_in">Dine In</string>
    <string name="take_out">Take Out</string>
    <string name="business_logo">Business Logo</string>
    <string name="addon_price_format">+ ₱%.2f</string>
    <string name="regular_price_format">₱%.2f</string>
    <string name="order_summary">Order Summary</string>
    <string name="customize_order">Customize Order</string>
    <string name="_0">0</string>
    <string name="add_ons">Add Ons</string>
    <string name="add_quantity">Add quantity</string>
    <string name="subtract_quantity">Subtract quantity</string>
    <string name="add_order">ADD ORDER</string>
    <string name="item_price_not_found">Item price not found</string>
    <string name="_0_00">+₱0.00</string>
    <string name="welcome_kabarkadash">Welcome, Kabarkadash!</string>
    <string name="order_now">Order now</string>
    <string name="enjoy">Enjoy a cup of coffee</string>
    <string name="background_picture">background picture</string>
    <string name="back">Back</string>
    <string name="add_to_cart_0_00">Add to Cart — ₱0.00</string>
    <string name="coffee_shot">Coffee Shot</string>
    <string name="crushed_oreo">Crushed Oreo</string>
    <string name="pearls">Pearls</string>
    <string name="salty_cream">Salty Cream</string>
    <string name="plus_icon_to_increment_quantity">plus icon to increment quantity</string>
    <string name="_9_00">+ ₱9.00</string>
    <string name="_1">1</string>
    <string name="item_quantity">Item quantity</string>
    <string name="_50">50%</string>
    <string name="item_picture">item picture</string>
    <string name="dash_latte">Dash Latte</string>
    <string name="starts_at_39_00">starts at ₱39.00</string>
    <string name="icon_to_decrement_quantity">icon to decrement quantity</string>
    <string name="_0_no_sugar">0% (No sugar)</string>
    <string name="_100_normal_sugar">100% (Normal sugar)</string>
    <string name="optional">OPTIONAL</string>
    <string name="required">REQUIRED</string>
    <string name="sugar_level">Sugar Level</string>
    <string name="no_add_ons">No add ons</string>
    <string name="icon_to_edit_details">icon to edit details</string>
    <string name="cart_items">Cart Items</string>
    <string name="service_mode">Service Mode</string>
    <string name="order_no">Order No.</string>
    <string name="cash">Cash</string>
    <string name="gcash">GCash</string>
    <string name="payment_method">Payment Method</string>
    <string name="place_order_0_00">Place Order — ₱0.00</string>
    <string name="with">With</string>
    <string name="without">Without</string>
    <string name="drink_choices">Drink Choices</string>
    <string name="unavailable_items">UNAVAILABLE ITEMS</string>
</resources>