<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/decrementQuantity"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/icon_to_decrement_quantity"
        android:src="@drawable/minus_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/decrementQuantity"
        app:layout_constraintStart_toEndOf="@+id/decrementQuantity"
        app:layout_constraintTop_toTopOf="@+id/decrementQuantity"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/incrementQuantity"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:contentDescription="@string/plus_icon_to_increment_quantity"
        android:src="@drawable/add_item"
        app:layout_constraintBottom_toBottomOf="@+id/quantity"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toTopOf="@+id/quantity" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/item_picture"
        android:src="@drawable/dash_latte"
        app:layout_constraintBottom_toBottomOf="@+id/incrementQuantity"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@+id/incrementQuantity"
        app:layout_constraintTop_toTopOf="@+id/incrementQuantity" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/dash_latte"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/itemPrice"
        app:layout_constraintStart_toEndOf="@+id/itemImage"
        app:layout_constraintTop_toTopOf="@+id/itemImage" />

    <ImageView
        android:id="@+id/editButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border_green_less_rounded"
        android:contentDescription="@string/icon_to_edit_details"
        android:padding="4dp"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@id/addOnItems"
        app:layout_constraintStart_toStartOf="@+id/itemName"
        app:layout_constraintTop_toTopOf="@+id/sugarLevel" />

    <TextView
        android:id="@+id/sugarLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:text="@string/sugar_level"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/itemName"
        app:layout_constraintStart_toEndOf="@+id/editButton"
        app:layout_constraintTop_toBottomOf="@+id/itemName" />

    <TextView
        android:id="@+id/addOnItems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/no_add_ons"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemImage"
        app:layout_constraintEnd_toEndOf="@+id/sugarLevel"
        app:layout_constraintStart_toStartOf="@+id/sugarLevel"
        app:layout_constraintTop_toBottomOf="@+id/sugarLevel" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/_0_00"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/itemName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemName" />

</androidx.constraintlayout.widget.ConstraintLayout>