<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.MaterialComponents.Light"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true"
    app:cardCornerRadius="10dp"
    app:strokeColor="@color/green"
    app:strokeWidth="3dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:foreground="#80464646">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/cloud_latte"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/item_picture" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="12dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/dash_latte" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="12dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/regular_price_format" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
