<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">

    <!--Top Navigation Bar-->
    <View
        android:id="@+id/rectangleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/page_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:paddingHorizontal="8dp"
        android:text="@string/customize_order"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_back" />

    <!--ScrollView for Item Customization-->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomRectangleView"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/rectangleView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Item Rectangle View-->
            <View
                android:id="@+id/itemInfoRectangleView"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/round_button_with_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:layout_marginStart="120dp"
                android:contentDescription="@string/item_picture"
                android:src="@drawable/dash_latte"
                app:layout_constraintBottom_toBottomOf="@+id/itemInfoRectangleView"
                app:layout_constraintStart_toStartOf="@+id/itemInfoRectangleView"
                app:layout_constraintTop_toTopOf="@+id/itemInfoRectangleView"
                app:layout_constraintVertical_bias="0.175" />

            <TextView
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dash_latte"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/itemInfoRectangleView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starts_at_39_00"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/itemName"
                app:layout_constraintTop_toBottomOf="@+id/itemName" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/itemInfoRectangleView"
                app:layout_constraintStart_toStartOf="@+id/itemPrice" />

            <LinearLayout
                android:id="@+id/drinkChoicesRectangleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:background="@drawable/round_button_with_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemInfoRectangleView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/drinkChoices"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginVertical="16dp"
                        android:layout_weight="1"
                        android:text="@string/drink_choices"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/drinkChoicesRequired"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginVertical="16dp"
                        android:text="@string/required"
                        android:textColor="@color/red"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/drinkChoicesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginBottom="32dp"
                    android:overScrollMode="never"
                    android:scrollbars="vertical"/>
            </LinearLayout>

            <!--Sugar Level Rectangle View-->
            <View
                android:id="@+id/sugarLevelRectangleView"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/round_button_with_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drinkChoicesRectangleView" />

            <TextView
                android:id="@+id/sugarLevel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:text="@string/sugar_level"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/sugarLevelRectangleView"
                app:layout_constraintTop_toTopOf="@+id/sugarLevelRectangleView" />

            <TextView
                android:id="@+id/required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:text="@string/required"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/sugarLevel"
                app:layout_constraintEnd_toEndOf="@+id/sugarLevelRectangleView"
                app:layout_constraintTop_toTopOf="@+id/sugarLevel" />

            <!--Sugar Level Options-->
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/sugarLevel"
                app:layout_constraintTop_toBottomOf="@+id/sugarLevel">

                <RadioButton
                    android:id="@+id/noSugarOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/_0_no_sugar"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/halfSugarOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/_50"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/normalSugarOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/_100_normal_sugar"
                    android:textSize="15sp" />
            </RadioGroup>

            <!--Sugar Level Add On Fees-->
            <TextView
                android:id="@+id/noSugarAddOnFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/halfSugarAddOnFee"
                app:layout_constraintEnd_toEndOf="@+id/required"
                app:layout_constraintTop_toTopOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/halfSugarAddOnFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/normalSugarAddOnFee"
                app:layout_constraintEnd_toEndOf="@+id/noSugarAddOnFee"
                app:layout_constraintTop_toBottomOf="@+id/noSugarAddOnFee" />

            <TextView
                android:id="@+id/normalSugarAddOnFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="@+id/halfSugarAddOnFee"
                app:layout_constraintTop_toBottomOf="@+id/halfSugarAddOnFee" />

            <LinearLayout
                android:id="@+id/addOnsRectangleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:background="@drawable/round_button_with_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sugarLevelRectangleView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/AddOns"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginVertical="16dp"
                        android:layout_weight="1"
                        android:text="@string/add_ons"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/optional"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginVertical="16dp"
                        android:text="@string/optional"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/addOnsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginBottom="32dp"
                    android:overScrollMode="never"
                    android:scrollbars="vertical"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!--Bottom Navigation Bar-->
    <View
        android:id="@+id/bottomRectangleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

    <ImageView
        android:id="@+id/minusQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_to_decrement_quantity"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:background="@drawable/background_white_border_green"
        android:gravity="center"
        android:hint="@string/item_quantity"
        android:inputType="number"
        android:padding="4dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="@+id/bottomRectangleView"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintStart_toEndOf="@+id/minusQuantity"
        app:layout_constraintTop_toTopOf="@+id/bottomRectangleView" />

    <ImageView
        android:id="@+id/addQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/plus_icon_to_increment_quantity"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText" />

    <Button
        android:id="@+id/addOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_white_border_green"
        android:paddingHorizontal="16dp"
        android:text="@string/add_to_cart_0_00"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/bottomRectangleView"
        app:layout_constraintEnd_toEndOf="@+id/bottomRectangleView"
        app:layout_constraintHeight_min="32dp"
        app:layout_constraintTop_toTopOf="@+id/bottomRectangleView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

</androidx.constraintlayout.widget.ConstraintLayout>